[package]
name = "advent_of_code_rs"
version = "0.1.1"
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
repository = "https://github.com/fornwall/advent-of-code-2018-rs"
license = "MIT OR Apache-2.0"
description = "Solutions to Advent of Code 2018 written in Rust"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"
