[package]
name = "advent_of_code_rs"
version = "25.0.0"
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
repository = "https://github.com/fornwall/advent-of-code-2018-rs"
license = "MIT OR Apache-2.0"
description = "Solutions to Advent of Code 2018 written in Rust"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "*"
